# play

./: .gitignore  Dockerfile  Dockerrun.aws.json  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
pages/: admin.py  models.py  serializers.py  urls.py  views.py
pages/migrations/: 0001_initial.py
poetry_web/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_poetry_web.py
